[workspace]
members = [
    "frontend",
    "shared",
    "endpoint",
    "grapher",
    "director",
    "sigmgr",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Data processing pipeline"
rust-version = "1.77"

[workspace.dependencies]
tokio = "1.34"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
amqprs = "2.0"
futures = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
pgrules = { path = "../rules-engine/pgrules" }
rand = "0.8"
