[package]
name = "bunzip2-rs"
version = "1.2.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Bzip2 decompressor"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
backend-utils = {path = "../../libs/backend-utils" }
ctxutils = {path = "../../libs/ctxutils" }
figment = { version = "0.10", features = ["toml", "env"] }
bzip2 = "0.4"
