[package]
name = "cdfs"
version = "1.1.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "ISO9660 / UDF backend"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
time = { version = "0.3", features = ["parsing", "macros"] }
crc = "3.0"
backend-utils = {path = "../../libs/backend-utils" }
ctxutils = {path = "../../libs/ctxutils" }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
