[package]
name = "domain-rs"
version = "1.1.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Domain data processor"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backend-utils = { path = "../../libs/backend-utils" }
figment = { version = "0.10", features = ["toml", "env"] }
whos = { version = '0.3', features = ['chrono'] }
chrono = { version = "0.4.38", features = ["serde"]}
