[package]
name = "domain-rs"
version = "1.3.0"
edition = "2024"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Domain data processor"

[dependencies]
idna = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
regex = "1.11"
lru = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = [ "parsing", "macros" ] }
icann-rdap-client = { version = "0.0.21", optional = true }
icann-rdap-common = { version = "0.0.21", optional = true }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
backend-utils = {  path = "../../libs/backend-utils" }
figment = { version = "0.10", features = ["toml", "env"] }
public-suffix = "0.1.2"

[features]
rdap = [ "dep:icann-rdap-client", "dep:icann-rdap-common" ]
