[package]
name = "email-rs"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Email backend"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
regex = "1"
urlencoding = "2.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
time = { version = "0.3", features = ["parsing"] }
backend-utils = {path = "../../libs/backend-utils" }
utf8dec-rs = {path = "../../libs/utf8dec-rs" }
figment = { version = "0.10", features = ["toml", "env"] }

[profile.release]
lto = true
codegen-units = 1
