[package]
name = "html-rs"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "HTML parser"

[dependencies]
select = "0.6.0"
url = "2.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
backend-utils = { path = "../../libs/backend-utils" }
ctxutils = {path = "../../libs/ctxutils" }
figment = { version = "0.10", features = ["toml", "env"] }
encoding_rs = "0.8.6"
chardetng = "0.1.17"
data-url = "0.3.1"
