[package]
name = "image-rs"
version = "1.3.0"
edition = "2024"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"

[dependencies]
backend-utils = { path = "../../libs/backend-utils" }
ctxutils = { path = "../../libs/ctxutils" }
ocr-rs = {  path = "../../libs/ocr-rs" }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
image = "0.25.0"
imageproc = "0.25.0"
kamadak-exif = "0.6.1"
tempfile = "3.8.0"
resvg = "0.45.0"
flate2 = "1.0"
gif = "0.13.1"
nsfw = { version="0.2.0", features = ["gif", "jpeg", "png", "webp"] }
rqrr = "0.9.0"
quick-xml = "0.37.2"
