[package]
name = "lnk-rs"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"

[dependencies]
bitflags = "2.4.0"
time = { version="0.3", features= ["macros"] }
tempfile = "3.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4.3"
backend-utils = {path = "../../libs/backend-utils" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
toml = "0.7"
figment = { version = "0.10", features = ["toml", "env"] }
ctxole = {path = "../../libs/ctxole" }
ctxutils = {path = "../../libs/ctxutils", features = [ "win32", "serde" ] }
