[package]
name = "odf-rs"
version = "1.2.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "OpenDocument backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend-utils = {path = "../../libs/backend-utils" }
ctxutils = {path = "../../libs/ctxutils" }
utf8dec-rs = {path = "../../libs/utf8dec-rs" }
ctxunzip = {path = "../../libs/ctxunzip" }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = [ "serialize" ] }
serde_json = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
scopeguard = "1.2.0"
url = "2.5.0"
addr = "0.15.6"

[dev-dependencies]
strsim = "0.11.1"
