[package]
name = "pdf-rs"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "PDF backend"

[dependencies]
backend-utils = { path = "../../libs/backend-utils" }
ocr-rs = { path = "../../libs/ocr-rs" }
image = "0.25.1"
nom = "7.1.3"
pdfium-render = { version = "0.8.20", default-features = false, features = [ "image", "thread_safe", "pdfium_6611" ] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tempfile = "3.8.0"
time = { version = "0.3.30", features = ["serde","parsing","macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
figment = { version = "0.10.12", features = ["toml", "env"] }
thiserror = "1.0.50"
openssl = "0.10.68"
scopeguard = "1.2.0"