[package]
name = "rtf-rs"
version = "1.1.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "RTF parser"

[dependencies]
anyhow = "1"
lazy_static = "1"
rtf-grimoire = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
backend-utils = { path = "../../libs/backend-utils" }
figment = { version = "0.10", features = ["toml", "env"] }
encoding_rs = "0.8"
chardetng = "0.1.17"
codepage = "0.1"
