[package]
name = "text-rs"
version = "1.1.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Text-processing backend"

[dependencies]
addr = "0.15.6"
backend-utils = { path = "../../libs/backend-utils" }
card-validate = "2.3.0"
chardetng = "0.1.17"
encoding_rs = "0.8.33"
figment = { version = "0.10.12", features = ["toml", "env"] }
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
simple-word-count = "0.1.1"
tempfile = "3.9.0"
tensorflow = { version = "0.21.0", default-features = false, features = ["tensorflow_runtime_linking"]}
thiserror = "1.0.51"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tree-sitter = "0.20.10"
tree-sitter-bash = "0.20.3"
tree-sitter-dart = "0.0.3"
tree-sitter-html = "0.19.0"
tree-sitter-javascript = "0.20.1"
tree-sitter-json = "0.20.1"
tree-sitter-lua = "0.0.19"
tree-sitter-php = "0.20.0"
tree-sitter-python = "0.20.4"
tree-sitter-ruby = "0.20.0"
tree-sitter-toml = "0.20.0"
tree-sitter-traversal = "0.1.2"
tree-sitter-typescript = "0.20.3"
url = "2.5.4"
vader_sentiment = "0.1.1"
whatlang = { version = "0.16.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.9.0"
