[package]
name = "unrar-rs"
version = "1.1.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "BSD+UnRAR"
description = "UnRAR backend"

[dependencies]
backend-utils = { path = "../../libs/backend-utils" }
figment = { version = "0.10.12", features = ["toml", "env"] }
libc = "0.2.152"
nt-time = "0.6.7"
scopeguard = "1.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.9.0"
thiserror = "1.0.51"
time = { version = "0.3.31", features = ["serde", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
widestring = "1.0.2"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0.83", features = ["parallel"] }
