[package]
name = "backend-utils"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Common facilities and data structures for backend development"

[dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
