[package]
name = "ctxole"
version = "1.3.0"
edition = "2024"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Compound File Binary File Format (aka Ole2) parser"

[dependencies]
ctxutils = { path = "../ctxutils", features = ["win32", "serde"] }
utf8dec-rs = { path = "../utf8dec-rs" }
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = [ "serialize" ] }
base64 = "0.22"
sha1 = "0.10.6"
sha2 = "0.10.8"
cbc = "0.1.2"
cfb8 = "0.8.1"
aes = "0.8.4"
md-5 = "0.10.6"
rc4 = "0.1.0"
