[package]
name = "ctxunzip"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Unzip library"

[dependencies]
ctxutils = {path = "../../libs/ctxutils" }
tracing = "0.1"
memchr = "2"
time = "0.3"
lazy_static = "1.4.0"
bzip2 = "0.4"
crc32fast = "1.4"
pbkdf2 = { version = "0.12.2", default-features = false, features = [ "hmac" ] }
sha1 = { version = "0.10.6", default-features = false, features = [ "asm" ] }
ctr = "0.9.2"
aes = "0.8.4"
hmac = { version = "0.12.1", features = [ "reset" ] }
zstd = { version = "0.13.1",  default-features = false, features = [ "legacy" ] }
libz-sys = "1.1"

[dev-dependencies]
num-traits = "0.2.16"
time = { version = "0.3", features = ["parsing", "macros"] }
serde_json = "1.0"

[profile.release]
# NOTE: DO NOT ENABLE LTO! it degrades the performance!
#lto = "fat"
#lto = true
#codegen-units = 1
#debug = true
