[package]
name = "ctxutils"
version = "1.2.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "Miscellaneous utility functions and structures"

[features]
win32 = [ "dep:time" ]

[dependencies]
time = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
