[package]
name = "ocr-rs"
version = "1.2.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "OCR backend which uses Tesseract"

[dependencies]
anyhow = "1.0.75"
backend-utils = { path = "../../libs/backend-utils" }
figment = { version = "0.10.12", features = ["toml", "env"] }
image = "0.25.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "2.0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8.0"

[build-dependencies]
bindgen = "0.71.1"
pkg-config = "0.3.27"
