[package]
name = "utf8dec-rs"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "A pragmatic text decoder based on iconv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tracing = "0.1"
